k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-cms
  labels:
    name: hotel-cms
    app.kubernetes.io/name: hotel-cms
